[package]
name = "spt-mod-organizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
itertools = "0.12.1"
log = "0.4.21"
simple_logger = "5.0.0"
windows = { version = "0.56.0", features = ["UI_Shell", "UI", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_System_SystemServices"] }
